fixed search button spacing

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -108,7 +108,7 @@
 
 @media screen and (max-width: 375px){
     .search-bar {
-        margin: 20px 0px 0px 5px;
+        margin: 20px 0px 0px 7px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -127,7 +127,18 @@
     }
 
     .search-select {
+        background-color: rgba(0, 0, 0, 0.103);
+        outline: none;
+        border-style: hidden;
+        color: #3c0c15;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 0px;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+        height: 37.2px;
+        padding-top: 7px;
         width: 125px;
+        margin-right: 0px;
     }
 
     .search-item {
@@ -156,5 +167,22 @@
 
     .search-category {
         margin-left: 8px;
+    }
+
+    .search-btn {
+        border: none;
+        padding: 8px;
+        border-radius: 8px;
+        height: 37.2px;
+        font-size: 12px;
+        background-color: #3c0c15;
+        color: white;
+        margin-top: 5px;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+        margin-left: 0px;
+        cursor: pointer;
     }
 }
